fix: emoji reaction noti not showing in web interface

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -11050,7 +11050,8 @@ noscript {
     color: $highlight-text-color;
   }
 
-  &--favourite &__icon {
+  &--favourite &__icon,
+  &--reaction &__icon {
     color: $gold-star;
   }
 
